Fabriken init